hphp/test/slow/object/const/static/base-inout.php.expectf
Fatal error: You cannot decorate this argument as inout in %s/base-inout.php on line 12
